# marketplace_microservice

./: .gitignore  LICENSE  docker-compose.yml  tmp_microservice.yml
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: main.py
auth_service/app/database/: crud.py  database.py  models.py  schemas.py
auth_service/templates/: index.html
marketplace_service/: Dockerfile  pyproject.toml
