[tool.poetry]
name = "pet-microservice"
version = "0.1.0"
description = ""
authors = ["Nikita Duzhnov <duzhnov.nikita55@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
